--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <main>
     <div class="card">
-      <img class="card-img" src="/images/image-qr-code.png" alt="QR code">
+      <img class="card-img" src="./images/image-qr-code.png" alt="QR code">
       <div class="card-content">
         <h3 class="card-heading">Improve your front-end skills by building projects</h3>
         <p class="card-body">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
